Thesis: some more explanations regarding consistency of Coq's type theory.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -236,7 +236,9 @@ Types are inhabited by terms, the formal counterpart of the informal notion of a
 
 Rules for creating terms are divided into two genres: introduction rules and elimination rules. Introduction rules for a type tell us how to create new terms of this type. For example, the introduction rules for $\N$ are $\term{\Gamma}{0}{\N}$, which says that $0$ is a natural number, and $\term{\Gamma, n : \N}{\suc{n}}{\N}$, which says that the successor of $n$ is a natural number given that $n$ is a natural number.
 
-Elimination rules for a type, on the other hand, tell us how to use terms of this type to get terms of other types. For example, the simplest elimination rule for $\N$ says that if $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$, then $\term{\Gamma, n : \N}{\recN{z}{s}{n}}{X}$. This rule, alternatively called a recursor, allows us to define functions by recursion on natural numbers, but to do proofs by induction we need a stronger elimination rule. We won't state it here to keep things simple.
+Elimination rules for a type, on the other hand, tell us how to use terms of this type to get terms of other types. For example, the simplest elimination rule for $\N$ says that if $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$, then $\term{\Gamma}{\recN{z}{s}{n}}{X}$. This rule, alternatively called a recursor, allows us to define functions by recursion on natural numbers, but to do proofs by induction we need a stronger elimination rule. We won't state it here to keep things simple.
+
+\label{convertible}
 
 The next thing we are interested in is convertibility, which formalizes the notion of computation. Intuitively, two terms are convertible if they evaluate\footnote{We leave the idea of evaluation informal and won't describe it in more detail.} to the same result. For example, we would expect that both $2 + 2$ and $4$ evaluate to $4$, and this is indeed the case, so they are convertible. To state that formally, we write $\termconv{\Gamma}{2 + 2}{4}{\N}$. Rules that govern the behaviour of convertibility, similarly to rules for term manipulation, come in two genres: computation rules and uniqueness rules.
 
@@ -244,7 +246,7 @@ Computation rules describe what happens when we first apply an introduction rule
 
 Uniqueness rules, on the other hand, describe what happens when we first use an elimination rule and then an introduction rule. For example, the uniqueness rule for $\N$ states that given $\term{\Gamma}{n}{\N}$, we have $\termconv{\Gamma}{\recN{0}{\m{succ}}{n}}{n}{\N}$. Note, however, that this uniqueness rule for natural numbers is rarely included in most presentations of type theory.
 
-The last thing to mention is how exactly contexts work and some of its consequences. First, there is the empty context, usually denoted by leaving empty space to the left of $\vdash$, for example $\type{}{\N}$ means that we can form the type $\N$ in the empty context. Second, if we have a context $\Gamma$ and in this context we can derive $\Gamma \vdash A$, then we can extend the context $\Gamma$ with a variable of this type, written $\Gamma, x : A$, provided that the name $x$ doesn't already occur in $\Gamma$.
+The last thing to mention is how exactly contexts work and some of its consequences. First, there is the empty context, usually denoted by leaving empty space to the left of $\vdash$. For example $\type{}{\N}$ means that we can form the type $\N$ in the empty context. Second, if we have a context $\Gamma$ and in this context we can derive $\Gamma \vdash A$, then we can extend the context $\Gamma$ with a variable of this type, written $\Gamma, x : A$, provided that the name $x$ doesn't already occur in $\Gamma$.
 
 The most important consequence of this is that we need a notion of convertibility for types. Because types are formed in contexts, and contexts can contain assumptions of the form $x : A$, types can depend on terms. For example, for any natural number $n$ we can form the type $\Fin{n}$ that has exactly $n$ elements, formally written $\type{\Gamma, n : \N}{\Fin{n}}$. This raises the question: is the type $\Fin{2 + 2}$ the same as the type $\Fin{4}$? The answer is yes -- because $2 + 2$ and $4$ are convertible, these types are also convertible, formally written $\typeconv{\Gamma}{\Fin{2 + 2}}{\Fin{4}}$. The rules that govern type convertibility aren't very interesting -- they say that convertibility is an equivalence relation and that dependent types are convertible whenever the terms they depend on are convertible.
 
@@ -468,7 +470,7 @@ Note that we don't assume anything about the relation -- \m{R} can be any relati
 
 So, we're done, right? Not quite. If you're an attentive reader, you should remember that we set out to give a specification of a sorting function, whereas it's easy to notice that so far we have only given a definition of what it means for a list to be sorted.
 
-That's a significant mismatch, because a sorting function is not one that just returns a sorted list as a result. Consider the function that always returns an empty list. It certainly returns a list that is sorted, but it isn't a sorting function -- the process of sorting shouldn't remove (or add) any elements, only shuffle the existing ones. What we are missing is a condition saying that the output of the function is a permutation of the input.
+That's a significant mismatch, because a sorting function is not any function that just returns a sorted list as a result. Consider the function that always returns an empty list. It certainly returns a list that is sorted, but it isn't a sorting function -- the process of sorting shouldn't remove (or add) any elements, only shuffle the existing ones. What we are missing is a condition saying that the output of the function is a permutation of the input.
 
 This is a minor but important lesson for us: while devising a specification, we must not get drown in minute details of improving patchwork definitions with inductive types, but we have to always bear in mind our final goal.
 
@@ -519,7 +521,7 @@ So far we have seen three different definitions of \m{Permutation}, but there's 
 
 The focal ideas of \textit{generating}, \textit{counting} and \textit{permuting} yield definitions which are pretty different, but it is crucial to observe that the precise definition matters only if we are starting from scratch and have to prove all the necessary lemmas ourselves. In such a case different definitions are fit for different purposes and vary greatly in their strengths and weaknesses, but in case all the properties of permutations we need are readily available, the definition doesn't matter.\footnote{Another way not to worry about how we define permutations is to abstract over this definition by taking ``permutation'' to mean any relation \m{P : forall A : Type, list A -> list A -> Prop} that satisfies the properties we will need it to satisfy. This is a glimpse of the concepts and techniques we will see in the chapters to come.} This is indeed the case for the original definition we gave (the one based on generating), because Coq's standard library is replete with lemmas that we can use in our proofs, which guarantees that this definition is easy to use. Because it is also abstract enough, we will stick with it.
 
-The final specification of a sorting function that we have arrived at through our considerations is shown in the listing below. A function \m{f} is a sorting function (according to some relation \m{R}, of which we think as the order) if the output is a sorted permutation of the input. We pack these notions into a class named \m{Sort} using a combination of parameters and fields - a distinction we will revisit later.
+The final specification of a sorting function that we have arrived at through our considerations is this: a function \m{f} is a sorting function (according to some relation \m{R}, of which we think as the order) if the output is a sorted permutation of the input. We pack these notions into a class named \m{Sort}, whose definition is shown in the listing below.
 
 \inputminted
 [
@@ -530,7 +532,7 @@ The final specification of a sorting function that we have arrived at through ou
 ]
 {Coq}{Snippets/SpecifyTheProblem.v}
 
-To sum up our struggles: in this chapter we learned a useful criterion for telling when a specification is bad, but to apply it we must first have something to apply it to. We also learned two hints that can help us improve a bad specification, but they are no silver bullets: sometimes we can improve a patchwork definition by inductivizing (that is, defunctionalizing) it, and sometimes we can find a new definition by focusing on a different aspect of the object we are defining, but it is hard to tell in advance whether we should take such steps. We once more stress the fact that inventing specifications is an art that one gets better at with experience.
+To sum up our struggles: in this chapter we learned a useful criterion for telling when a specification is bad, but to apply it we must first have something to apply it to. We also learned two hints that can help us improve a bad specification, but they are no silver bullets: sometimes we can improve a patchwork definition by turning it into an inductive definition, and sometimes we can find a new definition by focusing on a different aspect of the object we are defining, but it is hard to tell in advance whether we should take such steps. We once more stress the fact that inventing specifications is an art that one gets better at with experience.
 
 \chapter{Abstract the algorithm} \label{template}
 
@@ -594,7 +596,7 @@ The main difference between these two implementations is a discrepancy in their 
 
 We have to admit that the presentation is a bit biased in favor of Haskell, because the definition of \m{filter} is omitted. However, \m{filter} is another two-liner, so even if it was included, the Haskell way of partitioning is still much more abstract than the C way. This is also mitigated by the fact that the second part of the last bullet point, ``putting the recursively sorted parts together'' is biased in favor of C, because it's already included in the partitioning, whereas in Haskell, if we wanted to be fully explicit, we would have to inline the definition of \m{++}, another two-liner.
 
-The above details aren't that important, however. What matters is the conclusion we wanted to illustrate: the Haskell version looks much simpler (and it's way easier to judge its correctness) because it's much more abstract and modular, in some sense. The C version, being much more concrete, isn't as friendly-looking.\footnote{I don't mean to imply that all imperative implementations of quicksort must be somehow inferior to all functional implementations. I think that given language features such as higher-order functions and interfaces, which are missing from C, the imperative implementation could match the functional one in simplicity and elegance.}
+The above details aren't that important, however. What matters is the conclusion we wanted to illustrate: the Haskell version looks much simpler (and it's way easier to judge its correctness) because it is, in some sense, much more abstract and modular. The C version, being much more concrete, isn't as friendly-looking.\footnote{I don't mean to imply that all imperative implementations of quicksort must be somehow inferior to all functional implementations. I think that given language features such as higher-order functions and interfaces, which are missing from C, the imperative implementation could match the functional one in simplicity and elegance.}
 
 Our formally correct implementation in Coq will necessarily look much scarier and be several times longer than the typical imperative implementation (because of all the correctness proofs being much longer than the algorithm itself), but will in the end be just as simple and beautiful as the Haskell implementation. The key to achieving this is a technique derived from the above observations on abstractness and concreteness.
 
@@ -606,7 +608,7 @@ In the two-line Haskell implementation of quicksort, the head of the list is cho
 
 The second part of the concept/technique tells us that we can ``ignore the matter of termination at first''. At first glance this looks rather unrelated to the part about ``abstract template'', but after closer inspection it's an important special case.
 
-Coq is a total language, which means that all recursive functions necessarily terminate. This raises the problem of termination checking: how does Coq know whether a function we're implementing is terminating? In most cases a simple syntactical check is enough, but in the general case the problem is undecidable and we have to prove termination manually.
+Coq is a total language, which means that all recursive functions we can express are necessarily terminating. This raises the problem of termination checking: how does Coq know whether a function we're implementing is terminating? In many cases a simple syntactical check is enough, but in the general case the problem is undecidable and we have to prove termination manually.
 
 Because of this fact, an implementation of a general recursive function is usually weaved of two closely knit parts: the algorithmic part (how to do it) and the logical part (why doing it terminates). These parts are intertwined: the algorithmic part is littered with proofs and the termination proof of course strongly depends on the algorithm's properties.
 
@@ -689,7 +691,7 @@ This is what has indeed happened to our initial template. We declared the return
 
 How do we avoid making such mistakes in the future? To learn that, we have to look at the problem from a more general perspective first. One such perspective, which also encompasses many other phenomena, stems from making a distinction between implicit and explicit information.\footnote{The terms and the whole perspective are mine. I don't know if it appears anywhere in the literature.} A piece of information is explicit when it is backed by evidence\footnote{For the purpose of the current paragraph, ``evidence'' is basically synonymous with judgments of type theory, as presented in section \ref{mltt}} and implicit otherwise. This distinction can be likened to that between language and metalanguage or theory and metatheory: explicit information is information internal to the system (in our case, available inside Coq), whereas implicit information is information external to the system (in our case, available to us, but not necessarily to Coq).
 
-An example: the lists \m{[1; 2; 3]} and \m{[2; 3; 1]} are obviously permutations of each other, but given only this, the information stays implicit. If we also have a proof of \m{Permutation [1; 2; 3] [2; 3; 1]}, the information becomes explicit, with the proof being our evidence. Another example: if we pattern match on a list \m{l}, then in the \m{nil} branch we explicitly know that \m{l} is empty and the evidence is the fact that \m{l} and \m{nil} are convertible. In the \m{cons} case, we explicitly know that \m{l} is not empty and the evidence is the fact that \m{l} is convertible with \m{h\ ::\ t} where \m{h} is its head and \m{t} its tail.
+An example: the lists \m{[1; 2; 3]} and \m{[2; 3; 1]} are obviously permutations of each other, but given only this, the information stays implicit. If we also have a proof of \m{Permutation [1; 2; 3] [2; 3; 1]}, the information becomes explicit, with the proof being our evidence. Another example: if we pattern match on a list \m{l}, then in the \m{nil} branch we explicitly know that \m{l} is empty and the evidence is the fact that \m{l} and \m{nil} are convertible.\footnote{Recall that convertibility was explained in section \ref{convertible}.} In the \m{cons} case, we explicitly know that \m{l} is not empty and the evidence is the fact that \m{l} is convertible with \m{h\ ::\ t} where \m{h} is its head and \m{t} its tail.
 
 Boolean blindness (of the third kind) can be summarized by saying that it occurs when not enough explicit information is present to guarantee a smooth information flow in the program, but we can apply the distinction between explicit and implicit information to understand many more phenomena.
 
@@ -738,7 +740,14 @@ This is because, in accordance with concept/technique \#2, we ignored the matter
 
 \section{The inductive domain method} \label{inductivedomain}
 
-How do we prove that our algorithm terminates? Before we tackle this question, let's first recall \textit{why} we have to prove it: the only form of recursion allowed in Coq is \textit{structural recursion}, i.e. one in which recursive calls are made on subterms of the principal argument. Because terms are finite, this guarantees that all structurally recursive programs terminate and from termination (or rather, from strong normalization) follows consistency of Coq's logic. Thus, on the one hand, the restriction to structural recursion protects us from contradiction (and from other evils too), but on the other hand it can be quite inconvenient from the pragmatic programmer's point of view.
+How do we prove that our algorithm terminates? Before we tackle this question, let's first recall \textit{why} we have to prove it: in short, to avoid inconsistency. Coq's logic\footnote{By Coq's logic we mean its term language, Gallina.} is consistent, which means that it is impossible to prove \m{False} in the empty context. This fact follows from a property enjoyed by Coq, called canonicity: every term in the empty context evaluates to a canonical form in a finite number of computation steps, no matter in what order these steps are carried out. A canonical form is what we intuitively expect the final result of a computation to look like: for natural numbers, the canonical forms are $0, 1, 2, \dots$ (i.e. $\m{0}, \m{\suc{0}}, \m{\suc{\suc{0}}}, \dots$), for booleans they are \m{true} and \m{false} and so on. In general, the canonical forms of an inductive type are generated by its constructors.
+
+Given canonicity, it is very easy to prove consistency. Let's assume that Coq is inconsistent, i.e. that we have some \m{e :\ False}. But then, by canonicitiy, \m{e} evaluates to a canonical form, which means that it is of the form \m{c t\_1\ \dots\ t\_n}, where \m{c} is some constructor of the type \m{False}. But \m{False} has no constructors! Therefore, we have a contradiction and Coq is consistent.
+
+
+
+
+the only form of recursion allowed in Coq is \textit{structural recursion}, i.e. one in which recursive calls are made on subterms of the principal argument. Because terms are finite, this guarantees that all structurally recursive programs terminate and from termination follows the consistency of Coq's logic.\footnote{To be more precise, consistency (i.e. we can't prove \m{False}) follows from strong normalization (which says that all terms have a normal form, i.e. all } Thus, on the one hand, the restriction to structural recursion protects us from contradiction (and from other evils too), but on the other hand it can be quite inconvenient from the pragmatic programmer's point of view.
 
 Structural recursion is to be contrasted with \textit{general recursion}, found in most programming languages, in which arguments of recursive calls can be arbitrary. This is very convenient for the pragmatic programmer, because it doesn't constrain him at all, but renders the language inconsistent as a logic, and thus absolutely useless for formal reasoning.\footnote{Note, however, that an inconsistent language can still be useful for the purpose of \textit{rigorous} reasoning. See \cite{FastAndLoose} for details.} Consider Haskell's \m{Void} type, for example, which is supposed to be empty, just like its Coq equivalent \m{False}. There is no direct way of making an element of \m{Void}, but using general recursion we can easily define a nonterminating function \m{f\ ::\ a -> Void} (for example by setting \m{f x = f x}), which we can then use to obtain an element of \m{Void} (for example \m{f ()\ ::\ Void}).
 
