--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -230,25 +230,39 @@ In this section we describe the basic principles on which Coq is founded. Coq is
 
 To avoid drowning in minute details, we instead describe Martin-L\"{o}f Type Theory (MLTT) \cite{MLTT1} \cite{MLTT2}, a closely related system which from now on we will call simply ``type theory''. In the \hyperref[coq]{next section}, where we introduce Coq, we will point out the relevant differences from type theory as we go. The material presented in this section is standard, but in the light of \hyperref[formal]{previous section's} closing paragraphs we encourage people familiar with type theory to read it as a description not of a formal system, but of a model of computation.
 
-In type theory, as the name suggests, the basic objects of interest are types. In order to be meaningful, a type must first be formed. For example, we can always form the type $\N$ of natural numbers, but in general this is not the case: sometimes to form a type we must make an assumption or even several assumptions. We keep track of our assumptions using contexts. For example, if in a context $\Gamma$ we can form the types $A$ and $B$, written $\type{\Gamma}{A}$ and $\type{\Gamma}{B}$ respectively, then we can form the type of functions from $A$ to $B$, written $\type{\Gamma}{A \to B}$. The rules that govern type formation are called, unsurprisingly, formation rules.
+As a model of computation, type theory is a bit unusual, because the most important things it is concerned with are not programs or computations -- as the name suggests, its basic objects of interest are types. We can think of types as specifications that prescribe what is to be computed. In order to be meaningful, a type must first be formed. For example, we can form the type $\N$ of natural numbers and the type $\N \to \N$ of functions from natural numbers to natural numbers. The rules that govern type formation are called, unsurprisingly, formation rules.
 
-Types are inhabited by terms, the formal counterpart of the informal notion of algorithm. For example, the type of natural numbers $\N$ has as terms, among others, $4$ and $2 + 2$, written $4 : \N$ and $2 + 2 : \N$, respectively. Similarly to the case of type formation, what is a term and what is not depends on the assumptions we have made: $n + m : \N$ only under the assumptions that $n : \N$ and $m : \N$, which we can formally write as $\term{n : \N, m : \N}{n + m}{\N}$. From now on we won't emphasize context-dependence, as everything we do in type theory depends on context.
+The formal counterpart of the informal notion of program (or algorithm) is called a term. Types are inhabited by terms, which we write as $x : A$ and read ``$x$ has type $A$'' or ``$x$ is of type $A$''. This corresponds to the informal notion of a program satisfying its specification. For example, the type of natural numbers $\N$ has as terms, among others, $4$ and $2 + 2$, written $4 : \N$ and $2 + 2 : \N$, whereas $\lambda n. n + 5 : \N \to \N$ is the function that adds $5$ to its argument.
 
-Rules for creating terms are divided into two genres: introduction rules and elimination rules. Introduction rules for a type tell us how to create new terms of this type. For example, the introduction rules for $\N$ are $\term{\Gamma}{0}{\N}$, which says that $0$ is a natural number, and $\term{\Gamma, n : \N}{\suc{n}}{\N}$, which says that the successor of $n$ is a natural number given that $n$ is a natural number.
+The notions of type and term are not absolute. What types can be formed and what terms inhabit a type depends, in general, on the assumptions that we make. For example, the type $\Fin{n}$ that has exactly $n$ elements\footnote{We will explain what an ``element'' is in a few paragraphs.} can be formed only under the assumption that $n : \N$, which we formally write as $\type{n : \N}{\Fin{n}}$. Another example: we have $n + m : \N$ only under the assumptions that $n : \N$ and $m : \N$, which we can write as $\term{n : \N, m : \N}{n + m}{\N}$.
+
+We keep track of these assumptions using contexts. How exactly do the contexts work? First, there is the empty context, usually denoted by leaving empty space to the left of $\vdash$. For example $\type{}{\N}$ means that we can form the type $\N$ in the empty context. Second, if we have $\Gamma \vdash A$, (i.e. in context $\Gamma$ we can form the type $A$), then we can extend the context $\Gamma$ with a variable of type $A$, written $\Gamma, x : A$, provided that the name $x$ doesn't already occur in $\Gamma$.
+
+
+
+For example, if in a context $\Gamma$ we can form the types $A$ and $B$, written $\type{\Gamma}{A}$ and $\type{\Gamma}{B}$ respectively, then we can form the type of functions from $A$ to $B$, written $\type{\Gamma}{A \to B}$. 
+
+From now on we won't emphasize context-dependence, as everything we do in type theory depends on context.
+
+Rules for creating terms can be divided into two main genres: introduction rules and elimination rules. Introduction rules for a type tell us how to create new terms of this type. For example, the introduction rules for $\N$ are $\term{\Gamma}{0}{\N}$, which says that $0$ is a natural number, and $\term{\Gamma, n : \N}{\suc{n}}{\N}$, which says that the successor of $n$ is a natural number given that $n$ is a natural number.
 
 Elimination rules for a type, on the other hand, tell us how to use terms of this type to get terms of other types. For example, the simplest elimination rule for $\N$ says that if $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$, then $\term{\Gamma}{\recN{z}{s}{n}}{X}$. This rule, alternatively called a recursor, allows us to define functions by recursion on natural numbers, but to do proofs by induction we need a stronger elimination rule. We won't state it here to keep things simple.
 
 \label{convertible}
 
-The next thing we are interested in is convertibility, which formalizes the notion of computation. Intuitively, two terms are convertible if they evaluate\footnote{We leave the idea of evaluation informal and won't describe it in more detail.} to the same result. For example, we would expect that both $2 + 2$ and $4$ evaluate to $4$, and this is indeed the case, so they are convertible. To state that formally, we write $\termconv{\Gamma}{2 + 2}{4}{\N}$. Rules that govern the behaviour of convertibility, similarly to rules for term manipulation, come in two genres: computation rules and uniqueness rules.
+The next thing we are interested in is convertibility, which formalizes the notion of computation. Intuitively, two terms are convertible if they evaluate\footnote{We leave the idea of evaluation informal and won't describe it in more detail.} to the same result. For example, we would expect that both $2 + 2$ and $4$ evaluate to $4$, and this is indeed the case, so they are convertible. To state that formally, we write $\termconv{\Gamma}{2 + 2}{4}{\N}$. Rules that govern the behaviour of convertibility, similarly to rules for creating terms, come in two main genres: computation rules and uniqueness rules.
 
 Computation rules describe what happens when we first apply an introduction rule and then an elimination rule. For example, the first computation rule for $\N$ states that given $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$, we have $\termconv{\Gamma}{\recN{z}{s}{0}}{z}{X}$, and the second rule states that given $\term{\Gamma}{z}{X}$, $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$ we have $\termconv{\Gamma}{\recN{z}{s}{\suc{n}}}{s(\recN{z}{s}{n})}{X}$.
 
 Uniqueness rules, on the other hand, describe what happens when we first use an elimination rule and then an introduction rule. For example, the uniqueness rule for $\N$ states that given $\term{\Gamma}{n}{\N}$, we have $\termconv{\Gamma}{\recN{0}{\m{succ}}{n}}{n}{\N}$. Note, however, that this uniqueness rule for natural numbers is rarely included in most presentations of type theory.
 
-The last thing to mention is how exactly contexts work and some of its consequences. First, there is the empty context, usually denoted by leaving empty space to the left of $\vdash$. For example $\type{}{\N}$ means that we can form the type $\N$ in the empty context. Second, if we have a context $\Gamma$ and in this context we can derive $\Gamma \vdash A$, then we can extend the context $\Gamma$ with a variable of this type, written $\Gamma, x : A$, provided that the name $x$ doesn't already occur in $\Gamma$.
+Besides computation and uniqueness rules, there are also two minor genres of rules for convertibility. First, there are three rules which ensure that convertibility is an equivalence relation. For example, there's a rule establishing that convertibility is symmetric, which says that given $\termconv{\Gamma}{t_1}{t_2}{A}$, we have $\termconv{\Gamma}{t_2}{t_1}{A}$. Sometimes these rules are admissible, i.e. they are not assumed in the definition of convertibility, but rather proved from this definition.
 
-The most important consequence of this is that we need a notion of convertibility for types. Because types are formed in contexts, and contexts can contain assumptions of the form $x : A$, types can depend on terms. For example, for any natural number $n$ we can form the type $\Fin{n}$ that has exactly $n$ elements, formally written $\type{\Gamma, n : \N}{\Fin{n}}$. This raises the question: is the type $\Fin{2 + 2}$ the same as the type $\Fin{4}$? The answer is yes -- because $2 + 2$ and $4$ are convertible, these types are also convertible, formally written $\typeconv{\Gamma}{\Fin{2 + 2}}{\Fin{4}}$. The rules that govern type convertibility aren't very interesting -- they say that convertibility is an equivalence relation and that dependent types are convertible whenever the terms they depend on are convertible.
+Second, there is also a very huge number of boring technical rules (we can call them congruence rules) which ensure that convertibility behaves well with respect to introduction and elimination rules. For example, we have a rule which says that successors of convertible natural numbers are convertible, i.e. that given $\termconv{\Gamma}{n}{m}{\N}$, we have $\termconv{\Gamma}{\suc{n}}{\suc{m}}{\N}$. For the elimination rules, we have a rule which says that given $\termconv{\Gamma}{z_1}{z_2}{X}$ and $\termconv{\Gamma}{s_1}{s_2}{X \to X}$ and $\termconv{\Gamma}{n_1}{n_2}{\N}$, we have $\termconv{\Gamma}{\recN{z_1}{s_1}{n_1}}{\recN{z_2}{s_2}{n_2}}{X}$.
+
+The most important consequence of this is that we need a notion of convertibility for types. 
+
+Because types are formed in contexts, and contexts can contain assumptions of the form $x : A$, types can depend on terms. For example, for any natural number $n$ we can form the type $\Fin{n}$ that has exactly $n$ elements, formally written $\type{\Gamma, n : \N}{\Fin{n}}$. This raises the question: is the type $\Fin{2 + 2}$ the same as the type $\Fin{4}$? The answer is yes -- because $2 + 2$ and $4$ are convertible, these types are also convertible, formally written $\typeconv{\Gamma}{\Fin{2 + 2}}{\Fin{4}}$. The rules that govern type convertibility aren't very interesting -- they say that convertibility is an equivalence relation and that dependent types are convertible whenever the terms they depend on are convertible.
 
 An astute reader has probably noticed that we sneaked into the above description a word that is familiar but was not defined, namely ``element''. The elements of a type $A$ are its closed terms that are in normal form. A term is closed if its context is empty and it is in normal form if it is the final result of evaluation, i.e. it can't be evaluated any further.
 
