--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -230,23 +230,19 @@ In this section we describe the basic principles on which Coq is founded. Coq is
 
 To avoid drowning in minute details, we instead describe Martin-L\"{o}f Type Theory (MLTT) \cite{MLTT1} \cite{MLTT2}, a closely related system which from now on we will call simply ``type theory''. In the \hyperref[coq]{next section}, where we introduce Coq, we will point out the relevant differences from type theory as we go. The material presented in this section is standard, but in the light of \hyperref[formal]{previous section's} closing paragraphs we encourage people familiar with type theory to read it as a description not of a formal system, but of a model of computation.
 
-As a model of computation, type theory is a bit unusual, because the most important things it is concerned with are not programs or computations -- as the name suggests, its basic objects of interest are types. We can think of types as specifications that prescribe what is to be computed. In order to be meaningful, a type must first be formed. For example, we can form the type $\N$ of natural numbers and the type $\N \to \N$ of functions from natural numbers to natural numbers. The rules that govern type formation are called, unsurprisingly, formation rules.
+As a model of computation, type theory is a bit unusual, because the most important things it is concerned with are not programs or computations -- as the name suggests, its basic objects of interest are types. We can think of types as specifications that prescribe what is to be computed. Only after we have a type, can we talk about the terms of that type, which are the formal counterparts of the informal notion of program/algorithm. This means that every program comes equipped with a specification which tells us what it computes.
 
-The formal counterpart of the informal notion of program (or algorithm) is called a term. Types are inhabited by terms, which we write as $x : A$ and read ``$x$ has type $A$'' or ``$x$ is of type $A$''. This corresponds to the informal notion of a program satisfying its specification. For example, the type of natural numbers $\N$ has as terms, among others, $4$ and $2 + 2$, written $4 : \N$ and $2 + 2 : \N$, whereas $\lambda n. n + 5 : \N \to \N$ is the function that adds $5$ to its argument.
+Types and terms are manipulated using judgements. The two basic kinds of judgements are the type formation judgement $\type{}{A}$, which asserts that $A$ is a type, and the typing judgement $\term{}{t}{A}$, which asserts that $t$ is a term of type $A$.\footnote{We can also read this as ``$t$ has type $A$'' or ``''$t$ inhabits type $A$''.} For example, the judgement $\type{}{\N}$ asserts that $\N$ is a type (as we will see, it is the type of natural numbers). Similarly, the judgement $\type{}{\N \to \N}$ asserts that $\N \to \N$ is a type (of functions from natural numbers to natural numbers). The judgement $\term{}{2 + 2}{\N}$ asserts that $2 + 2$ is a natural number, whereas $\term{}{\lambda n. n + 5}{\N \to \N$} asserts that the function which adds $5$ to its argument is a function from natural numbers to natural numbers.
 
-The notions of type and term are not absolute. What types can be formed and what terms inhabit a type depends, in general, on the assumptions that we make. For example, the type $\Fin{n}$ that has exactly $n$ elements\footnote{We will explain what an ``element'' is in a few paragraphs.} can be formed only under the assumption that $n : \N$, which we formally write as $\type{n : \N}{\Fin{n}}$. Another example: we have $n + m : \N$ only under the assumptions that $n : \N$ and $m : \N$, which we can write as $\term{n : \N, m : \N}{n + m}{\N}$.
+The notions of type and term are not absolute. What types can be formed and what terms inhabit a type depends, in general, on the assumptions that we make. For example, the type $\Fin{n}$ that has exactly $n$ elements\footnote{We will explain what an ``element'' is in a few paragraphs.} can be formed only under the assumption that $n$ is a natural number, which we formally write as $\type{n : \N}{\Fin{n}}$. Another example: $n + m$ is a natural number only under the assumptions that $n$ and $m$ are natural numbers, which we write as $\term{n : \N, m : \N}{n + m}{\N}$.
 
-We keep track of these assumptions using contexts. How exactly do the contexts work? First, there is the empty context, usually denoted by leaving empty space to the left of $\vdash$. For example $\type{}{\N}$ means that we can form the type $\N$ in the empty context. Second, if we have $\Gamma \vdash A$, (i.e. in context $\Gamma$ we can form the type $A$), then we can extend the context $\Gamma$ with a variable of type $A$, written $\Gamma, x : A$, provided that the name $x$ doesn't already occur in $\Gamma$.
+We keep track of these assumptions using contexts. When a context $\Gamma$ appears to the left of $\vdash$ in a judgement, it means that this judgement holds under assumptions from $\Gamma$. How exactly do the contexts work? First, there is the empty context, usually denoted by leaving empty space to the left of $\vdash$. For example, $\type{}{\N}$ asserts that $\N$ is a type in the empty context. Second, if we have $\Gamma \vdash A$, (i.e. $A$ is a type in the context $\Gamma$), then we can extend the context $\Gamma$ with a variable of type $A$, written $\Gamma, x : A$, provided that the name $x$ doesn't already occur in $\Gamma$.
 
+A particular flavor of type theory is defined by specifying the rules for deriving its judgements. A rule in general has the form ``given judgements $J_1$, \dots, $J_n$, we can derive the judgement $J$''. The rules that govern type formation are called, unsurprisingly, formation rules. For example, if in a context $\Gamma$ we can form the types $A$ and $B$, written $\type{\Gamma}{A}$ and $\type{\Gamma}{B}$ respectively, then we can form the type of functions from $A$ to $B$, written $\type{\Gamma}{A \to B}$.
 
+Rules for creating terms can be divided into two main genres: introduction rules and elimination rules. Introduction rules for a type tell us how to create new terms of this type. For example, there are two introduction rules for natural numbers. The first says that $\term{\Gamma}{0}{\N}$, i.e. that $0$ is a natural number. The second says that given $\term{\Gamma}{n}{\N}$, we have $\term{\Gamma}{\suc{n}}{\N}$, i.e. that when we have a natural number $n$, its successor $\suc{n}$ is also a natural number.
 
-For example, if in a context $\Gamma$ we can form the types $A$ and $B$, written $\type{\Gamma}{A}$ and $\type{\Gamma}{B}$ respectively, then we can form the type of functions from $A$ to $B$, written $\type{\Gamma}{A \to B}$. 
-
-From now on we won't emphasize context-dependence, as everything we do in type theory depends on context.
-
-Rules for creating terms can be divided into two main genres: introduction rules and elimination rules. Introduction rules for a type tell us how to create new terms of this type. For example, the introduction rules for $\N$ are $\term{\Gamma}{0}{\N}$, which says that $0$ is a natural number, and $\term{\Gamma, n : \N}{\suc{n}}{\N}$, which says that the successor of $n$ is a natural number given that $n$ is a natural number.
-
-Elimination rules for a type, on the other hand, tell us how to use terms of this type to get terms of other types. For example, the simplest elimination rule for $\N$ says that if $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$, then $\term{\Gamma}{\recN{z}{s}{n}}{X}$. This rule, alternatively called a recursor, allows us to define functions by recursion on natural numbers, but to do proofs by induction we need a stronger elimination rule. We won't state it here to keep things simple.
+Elimination rules for a type, on the other hand, tell us how to use terms of this type to create terms of other types. For example, the simplest elimination rule for $\N$ says that if $\term{\Gamma}{z}{X}$ and $\term{\Gamma}{s}{X \to X}$ and $\term{\Gamma}{n}{\N}$, then $\term{\Gamma}{\recN{z}{s}{n}}{X}$. This rule, alternatively called a recursor, allows us to define functions by recursion on natural numbers, but to do proofs by induction we need a stronger elimination rule. We won't state it here to keep things simple.
 
 \label{convertible}
 
@@ -260,9 +256,11 @@ Besides computation and uniqueness rules, there are also two minor genres of rul
 
 Second, there is also a very huge number of boring technical rules (we can call them congruence rules) which ensure that convertibility behaves well with respect to introduction and elimination rules. For example, we have a rule which says that successors of convertible natural numbers are convertible, i.e. that given $\termconv{\Gamma}{n}{m}{\N}$, we have $\termconv{\Gamma}{\suc{n}}{\suc{m}}{\N}$. For the elimination rules, we have a rule which says that given $\termconv{\Gamma}{z_1}{z_2}{X}$ and $\termconv{\Gamma}{s_1}{s_2}{X \to X}$ and $\termconv{\Gamma}{n_1}{n_2}{\N}$, we have $\termconv{\Gamma}{\recN{z_1}{s_1}{n_1}}{\recN{z_2}{s_2}{n_2}}{X}$.
 
-The most important consequence of this is that we need a notion of convertibility for types. 
+Because types can depend on terms, computation can also occur inside types. For example, given the previously mentioned type $\type{n : \N}\Fin{n}$, what is the relation between the types $\Fin{2 + 2}$ and $\Fin{4}$? Are they the same or different? To even be able to ask this question formally, we need another kind of judgement, namely the type convertibility judgement $\typeconv{\Gamma}{A}{B}$ which asserts that the types $A$ and $B$ compute to the same type.
 
-Because types are formed in contexts, and contexts can contain assumptions of the form $x : A$, types can depend on terms. For example, for any natural number $n$ we can form the type $\Fin{n}$ that has exactly $n$ elements, formally written $\type{\Gamma, n : \N}{\Fin{n}}$. This raises the question: is the type $\Fin{2 + 2}$ the same as the type $\Fin{4}$? The answer is yes -- because $2 + 2$ and $4$ are convertible, these types are also convertible, formally written $\typeconv{\Gamma}{\Fin{2 + 2}}{\Fin{4}}$. The rules that govern type convertibility aren't very interesting -- they say that convertibility is an equivalence relation and that dependent types are convertible whenever the terms they depend on are convertible.
+The most important rule that involves type convertibility is called the subsumption rule. It says that if we can derive $\term{\Gamma}{t}{A}$ and $\typeconv{\Gamma}{A}{B}$, then we can also derive $\term{\Gamma}{t}{B}$. The other rules that govern type convertibility aren't terribly interesting. Similarly to term convertibility, we have three rules which establish that type convertibility is an equivalence relation. For example, we have a rule which says that if we can derive $\typeconv{\Gamma}{A}{B}$ and $\typeconv{\Gamma}{B}{C}$, then we can derive $\typeconv{\Gamma}{A}{C}$. Second, for each type formation rule we have one congruence rule which says that types formed from equal components are equal. For example, for the type $\Fin{n}$ we have the congruence rule which says if we can derive $\termconv{\Gamma}{n}{m}{\N}$, then we can derive $\typeconv{\Gamma}{\Fin{n}}{\Fin{m}}$. These congruence rules allow us to answer our initial question in the affirmative -- because $2 + 2$ and $4$ are convertible, i.e. $\termconv{\Gamma}{2 + 2}{4}{\N}$, the types $\Fin{2 + 2}$ and $\Fin{4}$ are also convertible, i.e. $\typeconv{\Gamma}{\Fin{2 + 2}}{\Fin{4}}$. 
+
+Some presentations of type theory can also include other judgements. Some have a context convertibility judgement. Others can have judgements for explicit substitutions. Yet others can drop the type formation judgement and type convertibility judgement and go with universes.
 
 An astute reader has probably noticed that we sneaked into the above description a word that is familiar but was not defined, namely ``element''. The elements of a type $A$ are its closed terms that are in normal form. A term is closed if its context is empty and it is in normal form if it is the final result of evaluation, i.e. it can't be evaluated any further.
 
