--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -44,6 +44,8 @@
 \newcommand{\thesisrepo}{\url{https://github.com/wkolowski/coq-algs/tree/master/Thesis}}
 
 % Some type theory markup.
+\newcommand{\context}[1]{#1 \vdash}
+\newcommand{\contextconv}[2]{#1 \equiv #2}
 \newcommand{\type}[2]{#1 \vdash #2}
 \newcommand{\typeconv}[3]{#1 \vdash #2 \equiv #3}
 \newcommand{\term}[3]{#1 \vdash #2 : #3}
@@ -232,13 +234,19 @@ To avoid drowning in minute details, we instead describe Martin-L\"{o}f Type The
 
 As a model of computation, type theory is a bit unusual, because the most important things it is concerned with are not programs or computations -- as the name suggests, its basic objects of interest are types. We can think of types as specifications that prescribe what is to be computed. Only after we have a type, can we talk about the terms of that type, which are the formal counterparts of the informal notion of program/algorithm. This means that every program comes equipped with a specification which tells us what it computes.
 
-Types and terms are manipulated using judgements. The two basic kinds of judgements are the type formation judgement $\type{}{A}$, which asserts that $A$ is a type, and the typing judgement $\term{}{t}{A}$, which asserts that $t$ is a term of type $A$.\footnote{We can also read this as ``$t$ has type $A$'' or ``''$t$ inhabits type $A$''.} For example, the judgement $\type{}{\N}$ asserts that $\N$ is a type (as we will see, it is the type of natural numbers). Similarly, the judgement $\type{}{\N \to \N}$ asserts that $\N \to \N$ is a type (of functions from natural numbers to natural numbers). The judgement $\term{}{2 + 2}{\N}$ asserts that $2 + 2$ is a natural number, whereas $\term{}{\lambda n. n + 5}{\N \to \N$} asserts that the function which adds $5$ to its argument is a function from natural numbers to natural numbers.
+Types and terms are manipulated using judgements, which are just assertions that may or may not be derivable.\footnote{For judgements and in the context of type theory, ``derivable'' simply means ``true''.} The two basic kinds of judgements are the type formation judgement $\type{}{A}$, which asserts that $A$ is a type, and the typing judgement $\term{}{t}{A}$, which asserts that $t$ is a term of type $A$.\footnote{We can also read this as ``$t$ has type $A$'' or ``''$t$ inhabits type $A$''.} For example, the judgement $\type{}{\N}$ asserts that $\N$ is a type (as we will see, it is the type of natural numbers). Similarly, the judgement $\type{}{\N \to \N}$ asserts that $\N \to \N$ is a type (of functions from natural numbers to natural numbers). The judgement $\term{}{2 + 2}{\N}$ asserts that $2 + 2$ is a natural number, whereas $\term{}{\lambda n. n + 5}{\N \to \N$} asserts that the function which adds $5$ to its argument is a function from natural numbers to natural numbers.
 
-The notions of type and term are not absolute. What types can be formed and what terms inhabit a type depends, in general, on the assumptions that we make. For example, the type $\Fin{n}$ that has exactly $n$ elements\footnote{We will explain what an ``element'' is in a few paragraphs.} can be formed only under the assumption that $n$ is a natural number, which we formally write as $\type{n : \N}{\Fin{n}}$. Another example: $n + m$ is a natural number only under the assumptions that $n$ and $m$ are natural numbers, which we write as $\term{n : \N, m : \N}{n + m}{\N}$.
+The notions of type and term are not absolute. Sometimes we can assert that $A$ is a type or that $t$ is a term of $A$ only under some assumptions. For example, we can assert that $\Fin{n}$, the type that is supposed to have exactly $n$ elements,\footnote{We will explain what an ``element'' is in a few paragraphs.} is indeed a type, only under the assumption that $n$ is a natural number. We write this formally as $\type{n : \N}{\Fin{n}}$. Another example: we can assert that $n + m$ is a natural number only under the assumptions that $n$ and $m$ are natural numbers, which we write as $\term{n : \N, m : \N}{n + m}{\N}$.
 
-We keep track of these assumptions using contexts. When a context $\Gamma$ appears to the left of $\vdash$ in a judgement, it means that this judgement holds under assumptions from $\Gamma$. How exactly do the contexts work? First, there is the empty context, usually denoted by leaving empty space to the left of $\vdash$. For example, $\type{}{\N}$ asserts that $\N$ is a type in the empty context. Second, if we have $\Gamma \vdash A$, (i.e. $A$ is a type in the context $\Gamma$), then we can extend the context $\Gamma$ with a variable of type $A$, written $\Gamma, x : A$, provided that the name $x$ doesn't already occur in $\Gamma$.
+We keep track of assumptions using contexts. When a context $\Gamma$ appears to the left of $\vdash$ in a judgement, it means that this judgement is made under assumptions from $\Gamma$. Such a judgement is called a hypothetical judgement. So, in their full generality, type formation and typing judgements are hypothetical judgements. The type formation judgement is written $\type{\Gamma}{A}$ and read ``in context $\Gamma$, $A$ is a type'', whereas the typing judgement is written $\term{\Gamma}{t}{A}$ and read ``in context $\Gamma$, $t$ is of type $A$''. What is and what is not a context is governed by a third kind of judgement, the well-formed context judgement, which is written $\context{\Gamma}$ and read ``$\Gamma$ is a well-formed context''. This kind of judgement is absolute and can not depend on any assumptions.
 
-A particular flavor of type theory is defined by specifying the rules for deriving its judgements. A rule in general has the form ``given judgements $J_1$, \dots, $J_n$, we can derive the judgement $J$''. The rules that govern type formation are called, unsurprisingly, formation rules. For example, if in a context $\Gamma$ we can form the types $A$ and $B$, written $\type{\Gamma}{A}$ and $\type{\Gamma}{B}$ respectively, then we can form the type of functions from $A$ to $B$, written $\type{\Gamma}{A \to B}$.
+It is important to reiterate that not all judgements are derivable. For example, the judgement $\term{}{5}{\N \to \N}$ asserts that five is a function from natural numbers to natural numbers, but this is clearly nonsense. To know which judgements are derivable (and which are not), we need inference rules. An inference rule in general has the form ``if we can derive the judgements $J_1$, \dots, $J_n$, then we can derive the judgement $J$''. In most texts, inference rules are written with a horizontal line notation, with premises above the line and the conclusion below it, but we will state them inline, using ordinary sentences. An important special case are inference rules with no premises, i.e. of the form ``the judgement $J$ is derivable''. Such a rule declares that the judgement $J$ holds unconditionally. For rules with no premises, we will identify the whole rule with the judgement $J$.
+
+A particular flavor of type theory (in our case, MLTT) is defined by specifying the rules for deriving its judgements.
+
+How exactly do the contexts work? First, there is the empty context, usually denoted by leaving empty space to the left of $\vdash$. For example, $\type{}{\N}$ asserts that $\N$ is a type in the empty context. Second, if we have $\Gamma \vdash A$, (i.e. $A$ is a type in the context $\Gamma$), then we can extend the context $\Gamma$ with a variable of type $A$, written $\Gamma, x : A$, provided that the name $x$ doesn't already occur in $\Gamma$.
+
+The rules that govern type formation are called, unsurprisingly, formation rules. For example, if in a context $\Gamma$ we can form the types $A$ and $B$, written $\type{\Gamma}{A}$ and $\type{\Gamma}{B}$ respectively, then we can form the type of functions from $A$ to $B$, written $\type{\Gamma}{A \to B}$.
 
 Rules for creating terms can be divided into two main genres: introduction rules and elimination rules. Introduction rules for a type tell us how to create new terms of this type. For example, there are two introduction rules for natural numbers. The first says that $\term{\Gamma}{0}{\N}$, i.e. that $0$ is a natural number. The second says that given $\term{\Gamma}{n}{\N}$, we have $\term{\Gamma}{\suc{n}}{\N}$, i.e. that when we have a natural number $n$, its successor $\suc{n}$ is also a natural number.
 
@@ -261,6 +269,8 @@ Because types can depend on terms, computation can also occur inside types. For 
 The most important rule that involves type convertibility is called the subsumption rule. It says that if we can derive $\term{\Gamma}{t}{A}$ and $\typeconv{\Gamma}{A}{B}$, then we can also derive $\term{\Gamma}{t}{B}$. The other rules that govern type convertibility aren't terribly interesting. Similarly to term convertibility, we have three rules which establish that type convertibility is an equivalence relation. For example, we have a rule which says that if we can derive $\typeconv{\Gamma}{A}{B}$ and $\typeconv{\Gamma}{B}{C}$, then we can derive $\typeconv{\Gamma}{A}{C}$. Second, for each type formation rule we have one congruence rule which says that types formed from equal components are equal. For example, for the type $\Fin{n}$ we have the congruence rule which says if we can derive $\termconv{\Gamma}{n}{m}{\N}$, then we can derive $\typeconv{\Gamma}{\Fin{n}}{\Fin{m}}$. These congruence rules allow us to answer our initial question in the affirmative -- because $2 + 2$ and $4$ are convertible, i.e. $\termconv{\Gamma}{2 + 2}{4}{\N}$, the types $\Fin{2 + 2}$ and $\Fin{4}$ are also convertible, i.e. $\typeconv{\Gamma}{\Fin{2 + 2}}{\Fin{4}}$. 
 
 Some presentations of type theory can also include other judgements. Some have a context convertibility judgement. Others can have judgements for explicit substitutions. Yet others can drop the type formation judgement and type convertibility judgement and go with universes.
+
+cite: 
 
 An astute reader has probably noticed that we sneaked into the above description a word that is familiar but was not defined, namely ``element''. The elements of a type $A$ are its closed terms that are in normal form. A term is closed if its context is empty and it is in normal form if it is the final result of evaluation, i.e. it can't be evaluated any further.
 
