Thesis: a paragraph on how the rules of type theory can be classified into various genres.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -238,15 +238,15 @@ Types and terms are manipulated using judgements, which are just assertions that
 
 The notions of type and term are not absolute. Sometimes we can assert that $A$ is a type or that $t$ is a term of $A$ only under some assumptions. For example, we can assert that $\Fin{n}$, the type that is supposed to have exactly $n$ elements,\footnote{We will explain what an ``element'' is in a few paragraphs.} is indeed a type, only under the assumption that $n$ is a natural number. We write this formally as $\type{n : \N}{\Fin{n}}$. Another example: we can assert that $n + m$ is a natural number only under the assumptions that $n$ and $m$ are natural numbers, which we write as $\term{n : \N, m : \N}{n + m}{\N}$.
 
-We keep track of assumptions using contexts. When a context $\Gamma$ appears to the left of $\vdash$ in a judgement, it means that this judgement is made under assumptions from $\Gamma$. Such a judgement is called a hypothetical judgement. So, in their full generality, type formation and typing judgements are hypothetical judgements. The type formation judgement is written $\type{\Gamma}{A}$ and read ``in context $\Gamma$, $A$ is a type'', whereas the typing judgement is written $\term{\Gamma}{t}{A}$ and read ``in context $\Gamma$, $t$ is of type $A$''. What is and what is not a context is governed by a third kind of judgement, the well-formed context judgement, which is written $\context{\Gamma}$ and read ``$\Gamma$ is a well-formed context''. This kind of judgement is absolute and can not depend on any assumptions.
+We keep track of assumptions using contexts. When a context $\Gamma$ appears to the left of $\vdash$ in a judgement, it means that this judgement is made under assumptions from $\Gamma$. Such a judgement is called a hypothetical judgement. So, in their full generality, type formation and typing judgements are hypothetical judgements. The type formation judgement is written $\type{\Gamma}{A}$ and read ``in context $\Gamma$, $A$ is a type'', whereas the typing judgement is written $\term{\Gamma}{t}{A}$ and read ``in context $\Gamma$, $t$ is of type $A$''. What is and what is not a context is governed by a third kind of judgement, the well-formed context judgement, which is written $\context{\Gamma}$ and read ``$\Gamma$ is a (well-formed) context''. This kind of judgement is absolute and can not depend on any assumptions.
 
-It is important to reiterate that not all judgements are derivable. For example, the judgement $\term{}{5}{\N \to \N}$ asserts that five is a function from natural numbers to natural numbers, but this is clearly nonsense. To know which judgements are derivable (and which are not), we need inference rules. An inference rule in general has the form ``if we can derive the judgements $J_1$, \dots, $J_n$, then we can derive the judgement $J$''. An important special case are inference rules with no premises, i.e. of the form ``the judgement $J$ is derivable''. Such a rule declares that the judgement $J$ holds unconditionally. For rules with no premises, we will identify the whole rule with the judgement $J$. In most texts, inference rules are written with a horizontal line notation, with premises (if any) above the line and the conclusion below it, but in the following paragraphs we will state them inline, sometimes symbolically and sometimes using ordinary sentences.
+It is important to reiterate that not all judgements are derivable. For example, the judgement $\term{}{5}{\N \to \N}$ asserts that five is a function from natural numbers to natural numbers, but this is clearly nonsense. To know which judgements are derivable (and which are not), we need inference rules. An inference rule in general has the form ``if $J_1$, \dots, $J_n$, then $J$'' and means that we can derive the judgement $J$ provided that we have already derived all of the judgements $J_1, \dots, J_n$. An important special case are inference rules with no premises, i.e. of the form ``$J$''. Such a rule declares that the judgement $J$ can be derived unconditionally. For rules with no premises, we will identify the whole rule with the judgement $J$. In most texts, inference rules are written with a horizontal line notation, with premises (if any) above the line and the conclusion below it, but in the following paragraphs we will state them inline using ordinary sentences.
 
-% A particular flavor of type theory is defined by specifying what judgements it has and what are the inference rules for deriving them. The rules can be roughly classified into three genres. The core rules tell us about the basics of each judgement and how the judgements interact. The type-specific rules tell us how to form the given type, how to create and use the terms of this type and how to compute with them; and type-specific bookkeeping rules which are very schematic and thus not explicitly stated in most texts, but nonetheless required for everything to work smoothly. The core rules are mainly concerned with the  how contexts works, how to use assumptions, 
+A particular flavor of type theory is defined by specifying what judgements it has and what are the inference rules for deriving them. The rules can be roughly classified into two genres. First, the core rules tell us about the basics of each judgement and how the judgements interact. Second, the type-directed rules tell us how to form the given type (these are called formation rules), how to create and use the terms of this type (introduction and elimination rules, respectively) and how to compute with them (computation and uniqueness rules). Additionally, there are some type-directed congruence rules which tell us how the formation, introduction and elimination rules behave with respect to computation. These congruence rules are very schematic and therefore often omitted from most texts on type theory, but they are nonetheless necessary for the whole system to work correctly.
 
-Let's start with rules for contexts. First, there is the empty context, usually denoted by leaving empty space to the left of $\vdash$. For example, $\type{}{\N}$ asserts that $\N$ is a type in the empty context. Second, if we can derive $\Gamma \vdash A$, (i.e. $A$ is a type in the context $\Gamma$), then we can extend the context $\Gamma$ with a variable of type $A$, written $\Gamma, x : A$, provided that the name $x$ doesn't already occur in $\Gamma$. There's also a very important typing rule mainly concerned with contexts, called the assumption rule. It states that if we have a well-formed context $\Gamma$ which contains the assumption $x : A$, then we can derive $\term{\Gamma}{x}{A}$.
+Let's start with rules for contexts. First, there is the empty context, usually denoted by leaving empty space to the left of $\vdash$. For example, $\type{}{\N}$ asserts that $\N$ is a type in the empty context. Second, if we can derive $\Gamma \vdash A$, (i.e. $A$ is a type in the context $\Gamma$), then we can extend the context $\Gamma$ with a variable of type $A$, written $\Gamma, x : A$, provided that the name $x$ doesn't already occur in $\Gamma$. There's also a very important typing rule mainly concerned with contexts, called the assumption rule. It states that if we have a well-formed context $\Gamma$ which contains the assumption $x : A$, then we can derive $\term{\Gamma}{x}{A}$. These three rules are the most important core rules. We will discuss other core rules as we go along.
 
-For each type there is a rule that specifies how this type is formed. These rules are called, unsurprisingly, formation rules. For example, if in a context $\Gamma$ we can form the types $A$ and $B$, written $\type{\Gamma}{A}$ and $\type{\Gamma}{B}$ respectively, then we can form the type of functions from $A$ to $B$, written $\type{\Gamma}{A \to B}$. The formation rule for the natural numbers is $\type{\Gamma}{\N}$, i.e. $\N$ is a type in any context.
+Moving on to the type-directed rules: for each type there is a rule that specifies how this type is formed. These rules are called, unsurprisingly, formation rules. For example, if in a context $\Gamma$ we can form the types $A$ and $B$, written $\type{\Gamma}{A}$ and $\type{\Gamma}{B}$ respectively, then we can form the type of functions from $A$ to $B$, written $\type{\Gamma}{A \to B}$. The formation rule for the natural numbers is $\type{\Gamma}{\N}$, i.e. $\N$ is a type in any context.
 
 Rules for terms (i.e. for the typing judgement) can be divided into two main genres: introduction rules and elimination rules. Introduction rules for a type tell us how to create new terms of this type. For example, there are two introduction rules for natural numbers. The first says that $\term{\Gamma}{0}{\N}$, i.e. that $0$ is a natural number. The second says that given $\term{\Gamma}{n}{\N}$, we have $\term{\Gamma}{\suc{n}}{\N}$, i.e. that when we have a natural number $n$, its successor $\suc{n}$ is also a natural number.
 
